--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,5 +23,11 @@
 <div role="main">
 {{ content }}
 </div>
+<footer class="site-footer">
+<hr />
+Text and assets are available under the <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>{{
+}}{% if site.github %}・<a href="https://github.com/{{ site.github }}">GitHub</a>{% endif %}{{
+}}{% if site.email %}・<a href="mailto:{{ site.email }}">Email</a>{% endif %}
+</footer>
 </body>
 </html>
