--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
 }}{% if page.id %}
 <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}/assets/{{ page.id | remove: '/' }}/thumbnail.jpeg">{{
 }}{% endif %}
+<link rel="alternate" type="application/atom+xml" title="Foxy Blog" href="{{ site.baseurl}}/feed.xml">
 </head>
 <body>
 <header class="site-header">
